connect to Games API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">gamesApplication</string>
-    <string name="games">Games</string>
+    <string name="games1">Games</string>
 </resources>
