--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">gamesApplication</string>
+    <string name="app_name">Game Master</string>
     <string name="games1">Games</string>
     <string name="sign_up">sing_up</string>
     <string name="log_in">log_in</string>
